--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.4.2",
+    "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@tawk.to/tawk-messenger-react": "^2.0.1",
     "framer-motion": "^7.6.9",
     "next": "^13.0.5",
     "next-pwa": "^5.6.0",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-loader-spinner": "^5.3.4",
+    "tawkto-react": "^3.0.1"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^17.3.0",
