--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": ["plugin:react/jsx-runtime", "plugin:@next/next/recommended"]
+  "rules": {
+    "consistent-return": "off",
+    "react/no-unescaped-entities": 0,
+    "@typescript-eslint/ban-ts-comment": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/consistent-type-imports": "off",
+    "import/order": "off",
+    "complexity": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  "extends": [
+    "sznm/react",
+    "plugin:react/jsx-runtime",
+    "plugin:@next/next/recommended"
+  ]
 }
