--- a/package.json
+++ b/package.json
@@ -20,15 +20,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.2",
+    "@chakra-ui/react": "^2.4.3",
     "@emailjs/browser": "^3.10.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@tawk.to/tawk-messenger-react": "^2.0.1",
     "framer-motion": "^7.6.9",
-    "next": "^13.0.5",
-    "next-pwa": "^5.6.0",
-    "next-seo": "^5.15.0",
+    "next": "12.2.0",
+    "next-pwa": "^5.5.4",
+    "next-seo": "^5.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
